syntax = "proto3";

package payment.v1;

option go_package = "github.com/Artyom099/factory/shared/pkg/payment/v1;payment_v1";

service PaymentV1Service {
    rpc PayOrder(PayOrderRequest) returns (PayOrderResponse) {}
}

// PaymentMethod - определение способа оплаты
enum PaymentMethod {
    PAYMENT_METHOD_UNSPECIFIED = 0; // Неизвестный способ
    PAYMENT_METHOD_CARD = 1; // Банковская карта
    PAYMENT_METHOD_SBP = 2; // Система быстрых платежей
    PAYMENT_METHOD_CREDIT_CARD = 3; // Кредитная карта
    PAYMENT_METHOD_INVESTOR_MONEY = 4; // Деньги инвестора (внутренний метод)
}

// PayOrderRequest
message PayOrderRequest {
    string order_uuid = 1; // [(validate.rules).string.uuid = true]; // UUID заказа
    string user_uuid = 2; // [(validate.rules).string.uuid = true]; // UUID пользователя, который инициирует оплату
    PaymentMethod payment_method = 3; // [(validate.rules).enum.defined_only = true]; // Выбранный способ оплаты
}

// PayOrderResponse
message PayOrderResponse {
    string transaction_uuid = 1; // [(validate.rules).string.uuid = true]; // UUID платежа
}
